--- a/org.modelica.mdt/HACKING
+++ b/org.modelica.mdt/HACKING
@@ -23,28 +23,27 @@ I.II. The release procedure
  * run the regression tests
    If some of the tests fail, go back to the drawing board.
    
- * Start over with a clean workspace
+ * remove all projects from the workspace
  
- * Make a version tag in the repository
+ * make a version tag in the repository
  
- * Checkout from version tag location in the repository:
+ * checkout from version tag location in the repository:
 
     - org.modelica.mdt
-    - org.modelica.mdt.tests
     - org.modelica.mdt.feature
     - org.modelica.mdt.site
   
- * Update version number in org.modelica.mdt/plugin.xml
+ * update version number in org.modelica.mdt/plugin.xml
  
- * Run 'PDE site'->'Build site' from the context menu of 
+ * run 'PDE tools'->'Build site' from the context menu of 
    org.modelica.mdt.site/site.xml
 
- * Export the update site to a public webserver, use 'Export'->'File System'
+ * export the update site to a public webserver, use 'Export'->'File System'
    wizard. Make sure that both features and plugin directories are exported.     
    
- * Test with a clean eclipse installation that the MDT-plugin installs correctly
+ * test with a clean eclipse installation that the MDT-plugin installs correctly
    from the update site. Use the Help->'Software Updates'->'Find and Install...'
    Check that it runs as expected.
    
- * Enjoy the release party!
+ * enjoy the release party!
  
